fixed html height issue on small screens

--- a/Zipline/RandomQuoteMachine/main.css
+++ b/Zipline/RandomQuoteMachine/main.css
@@ -5,6 +5,7 @@
     3. Button
     4. Quotes
     5. Footer
+    6. Media Queries
    
 */
 /* 1. Basic Document Styles
@@ -338,4 +339,16 @@ footer ul li a:hover {
 .footer-bottom-section {
   margin-top: 10px;
   margin-top: 0.714rem;
+}
+
+/* 6. Media Queries
+------------------------------ */
+@media (max-width: 770px) { 
+     #quotes {
+         padding-top: 50px;
+     }
+     
+     html {
+       min-height: 600px;
+     }
 }
